Fixed mobile spacing in reviews section

--- a/scss/landing.scss
+++ b/scss/landing.scss
@@ -968,10 +968,14 @@ body::-webkit-scrollbar-track {
 @media (max-width: 761px) {
     .review-row {
         flex-direction: column;
+        margin-top: 20px !important;
 
         .review-card {
             width: fit-content !important;
         }
+    }
+    #row1 {
+        margin-top: 40px !important;
     }
 }
 
